# VisageDvachevsky-epoll

./: .clang-format  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CONCEPTS.md  DEPENDENCIES.md  README.md  benchmark.sh  generate_benchmark_report.py
.github/workflows/: ci.yml  coverage.yml  pr-ci.yml
benchmark/: CMakeLists.txt  generated_api_benchmark.cpp  generated_json_benchmark.cpp  json_benchmark.cpp  json_parsing_benchmark.cpp  products_api_benchmark.cpp  simd_whitespace_benchmark.cpp
benchmarks/: baseline_flat.json  baseline_flat_normalized.json  current.json
docker/benchmarks/: Dockerfile
docs/: ROUTER.md
experiments/: deep_profile.sh
katana/core/include/katana/core/: epoll_reactor.hpp  http.hpp  http_headers.hpp  http_server.hpp  reactor_pool.hpp  ring_buffer_queue.hpp  serde.hpp
katana/core/src/: epoll_reactor.cpp  http.cpp  http_server.cpp  io_buffer.cpp  reactor_pool.cpp
profiling_output/: PROFILING_REPORT.md  baseline_benchmark.md
profiling_output/detailed_analysis/: BENCHMARK_RESULTS.md  ab_keepalive.txt  closechurn_scaling_full.txt  closechurn_summary.txt  keepalive_scaling.txt  keepalive_scaling_full.txt  keepalive_summary.txt
profiling_output/experiments/: ab_closechurn.txt  ab_keepalive.txt  strace_keepalive.txt
profiling_output/session1/: ab_keepalive.txt  ab_keepalive_fixed.txt
profiling_results/io_buffer_append4k_20251130T230734Z/: perf_report.txt
profiling_results/io_buffer_perf_20251130T222457Z/: perf_report.txt
profiling_results/io_buffer_perf_20251130T222838Z/: perf_report.txt
profiling_results/io_buffer_perf_20251130T223003Z/: perf_report.txt
profiling_results/io_buffer_perf_20251130T224500Z/: perf_report.txt
profiling_results/io_buffer_perf_20251130T225100Z/: perf_report.txt
profiling_results/io_buffer_perf_large_append_20251130T230604Z/: perf_report.txt
profiling_results/performance_benchmark_20251130T214742Z/: perf.folded  perf_report.txt
profiling_results/performance_benchmark_20251201T011211Z/: perf.folded  perf_report.txt
scripts/: compute_api_legacy_debug.py  test_keepalive.py
test/: CMakeLists.txt
test/load/: README.md  close_mode_test.py
test/load/scripts/: close_mode.lua
test/unit/: test_router.cpp
tools/katana_gen/: json_generator.cpp  router_generator.cpp
